{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 59,
  "lineage": "6e83a8aa-c1c0-c892-1a59-541d8af356e5",
  "resources": [
    {
      "module": "module.eks",
      "mode": "data",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495732660211:security-group/sg-0f37297ea42ba337d",
            "description": "EKS created security group applied to ENI that is attached to EKS Control Plane master nodes, as well as any managed workloads.",
            "filter": [
              {
                "name": "tag:aws:eks:cluster-name",
                "values": [
                  "kafka-lab-dev"
                ]
              },
              {
                "name": "tag:kubernetes.io/cluster/kafka-lab-dev",
                "values": [
                  "owned"
                ]
              }
            ],
            "id": "sg-0f37297ea42ba337d",
            "name": "eks-cluster-sg-kafka-lab-dev-1971970094",
            "tags": {
              "Name": "eks-cluster-sg-kafka-lab-dev-1971970094",
              "kubernetes.io/cluster/kafka-lab-dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0537379ef727cef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.msk",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "msk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495732660211:security-group/sg-04c7b77707a68890a",
            "description": "MSK cluster security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c7b77707a68890a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Kafka IAM/TLS from EKS nodes",
                "from_port": 9098,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f37297ea42ba337d"
                ],
                "self": false,
                "to_port": 9098
              },
              {
                "cidr_blocks": [],
                "description": "Kafka TLS from EKS nodes",
                "from_port": 9094,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f37297ea42ba337d"
                ],
                "self": false,
                "to_port": 9094
              },
              {
                "cidr_blocks": [],
                "description": "Zookeeper from EKS nodes",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f37297ea42ba337d"
                ],
                "self": false,
                "to_port": 2181
              }
            ],
            "name": "kafka-lab-dev-msk-sg",
            "name_prefix": "",
            "owner_id": "495732660211",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kafka-lab-dev-msk-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kafka-lab-dev-msk-sg",
              "Project": "kafka-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0537379ef727cef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_node_group.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role.nodes",
            "module.eks.aws_iam_role_policy_attachment.cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.nodes",
            "module.eks.data.aws_security_group.node",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de4a571258c145ee",
            "arn": "arn:aws:ec2:us-east-1:495732660211:elastic-ip/eipalloc-0de4a571258c145ee",
            "association_id": "eipassoc-0965736299f07df5b",
            "domain": "vpc",
            "id": "eipalloc-0de4a571258c145ee",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0149ad97244efb0a5",
            "private_dns": "ip-10-0-173-198.ec2.internal",
            "private_ip": "10.0.173.198",
            "public_dns": "ec2-44-199-66-183.compute-1.amazonaws.com",
            "public_ip": "44.199.66.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kafka-lab-dev-nat-eip-0"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kafka-lab-dev-nat-eip-0",
              "Project": "kafka-lab"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d51f37633628147c",
            "arn": "arn:aws:ec2:us-east-1:495732660211:elastic-ip/eipalloc-0d51f37633628147c",
            "association_id": "eipassoc-087a9c541882afd9e",
            "domain": "vpc",
            "id": "eipalloc-0d51f37633628147c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e3e54d5b0c1e7d2a",
            "private_dns": "ip-10-0-188-29.ec2.internal",
            "private_ip": "10.0.188.29",
            "public_dns": "ec2-18-232-11-73.compute-1.amazonaws.com",
            "public_ip": "18.232.11.73",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kafka-lab-dev-nat-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kafka-lab-dev-nat-eip-1",
              "Project": "kafka-lab"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065287d41a49e1651",
            "arn": "arn:aws:ec2:us-east-1:495732660211:elastic-ip/eipalloc-065287d41a49e1651",
            "association_id": "eipassoc-032bd7a4a92875790",
            "domain": "vpc",
            "id": "eipalloc-065287d41a49e1651",
            "network_border_group": "us-east-1",
            "network_interface": "eni-048a5243dae65d1d8",
            "private_dns": "ip-10-0-196-156.ec2.internal",
            "private_ip": "10.0.196.156",
            "public_dns": "ec2-54-174-40-83.compute-1.amazonaws.com",
            "public_ip": "54.174.40.83",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kafka-lab-dev-nat-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kafka-lab-dev-nat-eip-2",
              "Project": "kafka-lab"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495732660211:internet-gateway/igw-0ee6d05cfadead1c8",
            "id": "igw-0ee6d05cfadead1c8",
            "owner_id": "495732660211",
            "tags": {
              "Name": "kafka-lab-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kafka-lab-dev-igw",
              "Project": "kafka-lab"
            },
            "vpc_id": "vpc-0b0537379ef727cef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de4a571258c145ee",
            "association_id": "eipassoc-0965736299f07df5b",
            "connectivity_type": "public",
            "id": "nat-05b4c79d75f30f585",
            "network_interface_id": "eni-0149ad97244efb0a5",
            "private_ip": "10.0.173.198",
            "public_ip": "44.199.66.183",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d867e870df9b9207",
            "tags": {
              "Name": "kafka-lab-dev-nat-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kafka-lab-dev-nat-us-east-1a",
              "Project": "kafka-lab"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d51f37633628147c",
            "association_id": "eipassoc-087a9c541882afd9e",
            "connectivity_type": "public",
            "id": "nat-05e2c6f4546c6c95c",
            "network_interface_id": "eni-0e3e54d5b0c1e7d2a",
            "private_ip": "10.0.188.29",
            "public_ip": "18.232.11.73",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e7e21a3727596cf5",
            "tags": {
              "Name": "kafka-lab-dev-nat-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kafka-lab-dev-nat-us-east-1b",
              "Project": "kafka-lab"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065287d41a49e1651",
            "association_id": "eipassoc-032bd7a4a92875790",
            "connectivity_type": "public",
            "id": "nat-08fb80f25955b45aa",
            "network_interface_id": "eni-048a5243dae65d1d8",
            "private_ip": "10.0.196.156",
            "public_ip": "54.174.40.83",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09aaaf47181ad6f0e",
            "tags": {
              "Name": "kafka-lab-dev-nat-us-east-1c"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kafka-lab-dev-nat-us-east-1c",
              "Project": "kafka-lab"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495732660211:route-table/rtb-0268ac3b440a257bb",
            "id": "rtb-0268ac3b440a257bb",
            "owner_id": "495732660211",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05b4c79d75f30f585",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kafka-lab-dev-private-rt-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kafka-lab-dev-private-rt-us-east-1a",
              "Project": "kafka-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0537379ef727cef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495732660211:route-table/rtb-0735e02754355f849",
            "id": "rtb-0735e02754355f849",
            "owner_id": "495732660211",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05e2c6f4546c6c95c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kafka-lab-dev-private-rt-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kafka-lab-dev-private-rt-us-east-1b",
              "Project": "kafka-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0537379ef727cef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495732660211:route-table/rtb-0012067d90717df1c",
            "id": "rtb-0012067d90717df1c",
            "owner_id": "495732660211",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08fb80f25955b45aa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kafka-lab-dev-private-rt-us-east-1c"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kafka-lab-dev-private-rt-us-east-1c",
              "Project": "kafka-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0537379ef727cef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495732660211:route-table/rtb-05f929b2c29347c61",
            "id": "rtb-05f929b2c29347c61",
            "owner_id": "495732660211",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee6d05cfadead1c8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kafka-lab-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kafka-lab-dev-public-rt",
              "Project": "kafka-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0537379ef727cef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2f242f1b9a1d54b",
            "route_table_id": "rtb-0268ac3b440a257bb",
            "subnet_id": "subnet-03e2535346e837d7b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdf84917b756432b",
            "route_table_id": "rtb-0735e02754355f849",
            "subnet_id": "subnet-0cc315e630f3e9596"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003d7993e788b3600",
            "route_table_id": "rtb-0012067d90717df1c",
            "subnet_id": "subnet-0afe6ac64d590d5e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07998e31d2d5f2de2",
            "route_table_id": "rtb-05f929b2c29347c61",
            "subnet_id": "subnet-0d867e870df9b9207"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8d9d54b63cb47f0",
            "route_table_id": "rtb-05f929b2c29347c61",
            "subnet_id": "subnet-0e7e21a3727596cf5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059cfbe2708a5724a",
            "route_table_id": "rtb-05f929b2c29347c61",
            "subnet_id": "subnet-09aaaf47181ad6f0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495732660211:subnet/subnet-03e2535346e837d7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e2535346e837d7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495732660211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kafka-lab-dev-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kafka-lab-dev-private-us-east-1a",
              "Project": "kafka-lab",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b0537379ef727cef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495732660211:subnet/subnet-0cc315e630f3e9596",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc315e630f3e9596",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495732660211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kafka-lab-dev-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kafka-lab-dev-private-us-east-1b",
              "Project": "kafka-lab",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b0537379ef727cef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495732660211:subnet/subnet-0afe6ac64d590d5e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afe6ac64d590d5e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495732660211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kafka-lab-dev-private-us-east-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kafka-lab-dev-private-us-east-1c",
              "Project": "kafka-lab",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b0537379ef727cef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495732660211:subnet/subnet-0d867e870df9b9207",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d867e870df9b9207",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495732660211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kafka-lab-dev-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kafka-lab-dev-public-us-east-1a",
              "Project": "kafka-lab",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b0537379ef727cef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495732660211:subnet/subnet-0e7e21a3727596cf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.176.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7e21a3727596cf5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495732660211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kafka-lab-dev-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kafka-lab-dev-public-us-east-1b",
              "Project": "kafka-lab",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b0537379ef727cef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495732660211:subnet/subnet-09aaaf47181ad6f0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.192.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09aaaf47181ad6f0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495732660211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kafka-lab-dev-public-us-east-1c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kafka-lab-dev-public-us-east-1c",
              "Project": "kafka-lab",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b0537379ef727cef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495732660211:vpc/vpc-0b0537379ef727cef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03c110d5e50769535",
            "default_route_table_id": "rtb-08aac53ae1db05a58",
            "default_security_group_id": "sg-0b6471c815ab757ae",
            "dhcp_options_id": "dopt-0780a98f533bed2f7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b0537379ef727cef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08aac53ae1db05a58",
            "owner_id": "495732660211",
            "tags": {
              "Name": "kafka-lab-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "kafka-lab-dev-vpc",
              "Project": "kafka-lab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}